finished another revamp of benchmarking infrastructure.  getting consistent times, low cov, solid reporting of numbers